--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="6BNYlpwL5oQsOG3qIyiJy5mer--VoU-WuZRwtBVHHDc" />
   {%- seo -%}
   <!--<link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">-->
   <link rel="stylesheet" href="{{ "/assets/css/github-markdown.css" | relative_url }}">
